content/ocis/8.1/modules/admin/examples/ocis_helpers/adoc/invitations_configvars.adoc
// set the attribute to true or leave empty, true without any quotes.
// if the generated adoc file is used outside tabs, it renders correctly depending on the attribute set.
// if inside, you need to also use the xxx_deprecation.adoc file. attributes can't be defined inside tabs.

:show-deprecation: false

ifeval::[{show-deprecation} == true]

[#deprecation-note-2026-09-09-11-30-41]
[caption=]
.Deprecation notes for the invitations service
[width="100%",cols="~,~,~,~",options="header"]
|===
| Deprecation Info
| Deprecation Version
| Removal Version
| Deprecation Replacement
|===

{empty} +

endif::[]

[caption=]
.Environment variables for the invitations service
[width="100%",cols="~,~,~,~,~",options="header"]
|===
| Name
| IV
| Type
| Default Value
| Description

a|`OCIS_TRACING_ENABLED` +
`INVITATIONS_TRACING_ENABLED` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++bool ++
a| [subs=-attributes]
++false ++
a| [subs=-attributes]
Activates tracing.

a|`OCIS_TRACING_TYPE` +
`INVITATIONS_TRACING_TYPE` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++ ++
a| [subs=-attributes]
The type of tracing. Defaults to '', which is the same as 'jaeger'. Allowed tracing types are 'jaeger', 'otlp' and '' as of now.

a|`OCIS_TRACING_ENDPOINT` +
`INVITATIONS_TRACING_ENDPOINT` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++ ++
a| [subs=-attributes]
The endpoint of the tracing agent.

a|`OCIS_TRACING_COLLECTOR` +
`INVITATIONS_TRACING_COLLECTOR` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++ ++
a| [subs=-attributes]
The HTTP endpoint for sending spans directly to a collector, i.e. \http://jaeger-collector:14268/api/traces. Only used if the tracing endpoint is unset.

a|`OCIS_LOG_LEVEL` +
`INVITATIONS_LOG_LEVEL` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++ ++
a| [subs=-attributes]
The log level. Valid values are: 'panic', 'fatal', 'error', 'warn', 'info', 'debug', 'trace'.

a|`OCIS_LOG_PRETTY` +
`INVITATIONS_LOG_PRETTY` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++bool ++
a| [subs=-attributes]
++false ++
a| [subs=-attributes]
Activates pretty log output.

a|`OCIS_LOG_COLOR` +
`INVITATIONS_LOG_COLOR` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++bool ++
a| [subs=-attributes]
++false ++
a| [subs=-attributes]
Activates colorized log output.

a|`OCIS_LOG_FILE` +
`INVITATIONS_LOG_FILE` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++ ++
a| [subs=-attributes]
The path to the log file. Activates logging to this file if set.

a|`INVITATIONS_DEBUG_ADDR` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++127.0.0.1:9269 ++
a| [subs=-attributes]
Bind address of the debug server, where metrics, health, config and debug endpoints will be exposed.

a|`INVITATIONS_DEBUG_TOKEN` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++ ++
a| [subs=-attributes]
Token to secure the metrics endpoint.

a|`INVITATIONS_DEBUG_PPROF` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++bool ++
a| [subs=-attributes]
++false ++
a| [subs=-attributes]
Enables pprof, which can be used for profiling.

a|`INVITATIONS_DEBUG_ZPAGES` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++bool ++
a| [subs=-attributes]
++false ++
a| [subs=-attributes]
Enables zpages, which can be used for collecting and viewing in-memory traces.

a|`INVITATIONS_HTTP_ADDR` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++127.0.0.1:9265 ++
a| [subs=-attributes]
The bind address of the HTTP service.

a|`INVITATIONS_HTTP_ROOT` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++/graph/v1.0 ++
a| [subs=-attributes]
Subdirectory that serves as the root for this HTTP service.

a|`OCIS_CORS_ALLOW_ORIGINS` +
`INVITATIONS_CORS_ALLOW_ORIGINS` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++[]string ++
a| [subs=-attributes]
++[https://localhost:9200] ++
a| [subs=-attributes]
A list of allowed CORS origins. See following chapter for more details: *Access-Control-Allow-Origin* at \https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Access-Control-Allow-Origin. See the Environment Variable Types description for more details.

a|`OCIS_CORS_ALLOW_METHODS` +
`INVITATIONS_CORS_ALLOW_METHODS` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++[]string ++
a| [subs=-attributes]
++[] ++
a| [subs=-attributes]
A list of allowed CORS methods. See following chapter for more details: *Access-Control-Request-Method* at \https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Access-Control-Request-Method. See the Environment Variable Types description for more details.

a|`OCIS_CORS_ALLOW_HEADERS` +
`INVITATIONS_CORS_ALLOW_HEADERS` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++[]string ++
a| [subs=-attributes]
++[] ++
a| [subs=-attributes]
A list of allowed CORS headers. See following chapter for more details: *Access-Control-Request-Headers* at \https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Access-Control-Request-Headers. See the Environment Variable Types description for more details.

a|`OCIS_CORS_ALLOW_CREDENTIALS` +
`INVITATIONS_CORS_ALLOW_CREDENTIALS` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++bool ++
a| [subs=-attributes]
++false ++
a| [subs=-attributes]
Allow credentials for CORS.See following chapter for more details: *Access-Control-Allow-Credentials* at \https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Access-Control-Allow-Credentials.

a|`OCIS_HTTP_TLS_ENABLED` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++bool ++
a| [subs=-attributes]
++false ++
a| [subs=-attributes]
Activates TLS for the http based services using the server certifcate and key configured via OCIS_HTTP_TLS_CERTIFICATE and OCIS_HTTP_TLS_KEY. If OCIS_HTTP_TLS_CERTIFICATE is not set a temporary server certificate is generated - to be used with PROXY_INSECURE_BACKEND=true.

a|`OCIS_HTTP_TLS_CERTIFICATE` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++ ++
a| [subs=-attributes]
Path/File name of the TLS server certificate (in PEM format) for the http services.

a|`OCIS_HTTP_TLS_KEY` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++ ++
a| [subs=-attributes]
Path/File name for the TLS certificate key (in PEM format) for the server certificate to use for the http services.

a|`OCIS_KEYCLOAK_BASE_PATH` +
`INVITATIONS_KEYCLOAK_BASE_PATH` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++ ++
a| [subs=-attributes]
The URL to access keycloak.

a|`OCIS_KEYCLOAK_CLIENT_ID` +
`INVITATIONS_KEYCLOAK_CLIENT_ID` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++ ++
a| [subs=-attributes]
The client ID to authenticate with keycloak.

a|`OCIS_KEYCLOAK_CLIENT_SECRET` +
`INVITATIONS_KEYCLOAK_CLIENT_SECRET` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++ ++
a| [subs=-attributes]
The client secret to use in authentication.

a|`OCIS_KEYCLOAK_CLIENT_REALM` +
`INVITATIONS_KEYCLOAK_CLIENT_REALM` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++ ++
a| [subs=-attributes]
The realm the client is defined in.

a|`OCIS_KEYCLOAK_USER_REALM` +
`INVITATIONS_KEYCLOAK_USER_REALM` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++ ++
a| [subs=-attributes]
The realm users are defined.

a|`OCIS_KEYCLOAK_INSECURE_SKIP_VERIFY` +
`INVITATIONS_KEYCLOAK_INSECURE_SKIP_VERIFY` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++bool ++
a| [subs=-attributes]
++false ++
a| [subs=-attributes]
Disable TLS certificate validation for Keycloak connections. Do not set this in production environments.

a|`OCIS_JWT_SECRET` +
`INVITATIONS_JWT_SECRET` +

a| [subs=-attributes]
++pre5.0 ++
a| [subs=-attributes]
++string ++
a| [subs=-attributes]
++ ++
a| [subs=-attributes]
The secret to mint and validate jwt tokens.
|===

